# image_capture_tool

./: CMakeLists.txt  CMakeLists.txt.user.b5843c6  CMakeLists.txt.user.b5ad4db  README.md  mainpage.dox  package.xml
include/: image_converter.hpp  main_window.hpp  qnode.hpp  ui_main_window.h
src/: main.cpp  main_window.cpp  qnode.cpp
ui/: main_window.ui
